complete second task