@@ -1,9 +1,7 @@
 package ru.interview.service;
 
-import org.junit.Assert;
-import org.junit.Before;
-
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
@@ -12,22 +10,30 @@ import ru.interview.exception.ProductNotFoundException;
 import ru.interview.exception.ProductValidationException;
 import ru.interview.repository.ProductRepository;
 
-import java.util.Arrays;
+import javax.validation.ConstraintViolation;
+import javax.validation.Validator;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class ProductServiceTest {
 
     @Mock
     private ProductRepository productRepository;
 
+    @Mock
+    private Validator validator;
+
     @InjectMocks
     private ProductService productService;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
     }
@@ -36,94 +42,104 @@ public class ProductServiceTest {
     public void getAllProducts_ReturnsProductList() {
         Product product1 = new Product();
         Product product2 = new Product();
-        when(productRepository.findAll()).thenReturn(Arrays.asList(product1, product2));
+        when(productRepository.findAll()).thenReturn(List.of(product1, product2));
 
         List<Product> products = productService.getAllProducts();
-        Assert.assertEquals(2, products.size());
-        Assert.assertTrue(products.contains(product1));
-        Assert.assertTrue(products.contains(product2));
+        assertEquals(2, products.size());
+        assertTrue(products.contains(product1));
+        assertTrue(products.contains(product2));
     }
 
     @Test
-    public void getProductById_WhenProductExists_ReturnsProduct() throws ProductNotFoundException {
+    public void getProductById_WhenProductExists_ReturnsProduct() {
         Product product = new Product();
-        when(productRepository.findById(anyLong())).thenReturn(product);
+        when(productRepository.findById(anyLong())).thenReturn(Optional.of(product));
 
         Product foundProduct = productService.getProductById(1L);
-        Assert.assertEquals(product, foundProduct);
-    }
-
-    @Test(expected = ProductNotFoundException.class)
-    public void getProductById_WhenProductDoesNotExist_ThrowsProductNotFoundException() throws ProductNotFoundException {
-        when(productRepository.findById(anyLong())).thenThrow(new ProductNotFoundException("Product not found"));
-        productService.getProductById(1L);
+        assertEquals(product, foundProduct);
     }
 
     @Test
-    public void addProduct_ValidProduct_SavesProduct() throws ProductValidationException {
+    public void getProductById_WhenProductDoesNotExist_ThrowsProductNotFoundException() {
+        when(productRepository.findById(anyLong())).thenReturn(Optional.empty());
+        assertThrows(ProductNotFoundException.class, () -> productService.getProductById(1L));
+    }
+
+    @Test
+    public void addProduct_ValidProduct_SavesProduct() {
         Product product = new Product();
-        product.setId(1L);
         product.setName("Товар");
         product.setPrice(100.0);
-        doNothing().when(productRepository).save(any(Product.class));
+        when(validator.validate(any(Product.class))).thenReturn(Collections.emptySet());
+        when(productRepository.save(any(Product.class))).thenReturn(product);
 
-        productService.addProduct(product);
+        Product savedProduct = productService.addProduct(product);
         verify(productRepository, times(1)).save(any(Product.class));
+        assertEquals(product, savedProduct);
     }
 
     @Test
     public void addProduct_InvalidProduct_ThrowsProductValidationException() {
         Product product = new Product();
+        Set<ConstraintViolation<Product>> violations = Set.of(mock(ConstraintViolation.class));
+        when(validator.validate(any(Product.class))).thenReturn(violations);
 
-        Assert.assertThrows(ProductValidationException.class, () -> productService.addProduct(product));
+        assertThrows(ProductValidationException.class, () -> productService.addProduct(product));
     }
 
     @Test
-    public void updateProduct_ValidProduct_UpdatesProduct() throws ProductValidationException, ProductNotFoundException {
+    public void updateProduct_ValidProduct_UpdatesProduct() {
         Product existingProduct = new Product();
-        when(productRepository.findById(anyLong())).thenReturn(existingProduct);
+        Product updatedProduct = new Product();
+        updatedProduct.setId(1L);
+        updatedProduct.setName("Товар");
+        updatedProduct.setPrice(100.0);
+        when(productRepository.findById(anyLong())).thenReturn(Optional.of(existingProduct));
+        when(validator.validate(any(Product.class))).thenReturn(Collections.emptySet());
+        when(productRepository.save(any(Product.class))).thenReturn(existingProduct);
 
-        Product product = new Product();
-        product.setId(1L);
-        product.setName("Товар");
-        product.setPrice(100.0);
-
-        productService.updateProduct(product);
+        Product result = productService.updateProduct(updatedProduct);
         verify(productRepository, times(1)).save(existingProduct);
+        assertEquals(existingProduct, result);
     }
 
-    @Test(expected = ProductValidationException.class)
-    public void updateProduct_InvalidProduct_ThrowsProductValidationException() throws ProductNotFoundException, ProductValidationException {
-        Product product = new Product();
-        product.setPrice(-100.0);
-        productService.updateProduct(product);
+    @Test
+    public void updateProduct_InvalidProduct_ThrowsProductValidationException() {
+        Product existingProduct = new Product();
+        Product updatedProduct = new Product();
+        updatedProduct.setId(1L);
+        updatedProduct.setPrice(-100.0);
+        when(productRepository.findById(anyLong())).thenReturn(Optional.of(existingProduct));
+        Set<ConstraintViolation<Product>> violations = Set.of(mock(ConstraintViolation.class));
+        when(validator.validate(any(Product.class))).thenReturn(violations);
+
+        assertThrows(ProductValidationException.class, () -> productService.updateProduct(updatedProduct));
     }
 
-    @Test(expected = ProductNotFoundException.class)
-    public void updateProduct_ProductNotFound_ThrowsProductNotFoundException() throws ProductNotFoundException, ProductValidationException {
-        when(productRepository.findById(anyLong())).thenThrow(new ProductNotFoundException("Product not found"));
-
+    @Test
+    public void updateProduct_ProductNotFound_ThrowsProductNotFoundException() {
         Product product = new Product();
         product.setId(1L);
         product.setName("Товар");
         product.setPrice(0.0);
-        productService.updateProduct(product);
+        when(productRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.updateProduct(product));
     }
 
     @Test
-    public void deleteProduct_ExistingProduct_DeletesProduct() throws ProductNotFoundException {
-        Product product = new Product();
-        doNothing().when(productRepository).delete(any(Product.class));
+    public void deleteProduct_ExistingProduct_DeletesProduct() {
+        when(productRepository.existsById(anyLong())).thenReturn(true);
+        doNothing().when(productRepository).deleteById(anyLong());
 
-        productService.deleteProduct(product);
-        verify(productRepository, times(1)).delete(any(Product.class));
+        productService.deleteProduct(1L);
+        verify(productRepository, times(1)).deleteById(anyLong());
     }
 
     @Test
-    public void deleteProduct_ProductNotFound_ThrowsProductNotFoundException() throws ProductNotFoundException {
-        Product product = new Product();
-        doThrow(new ProductNotFoundException("Product not found")).when(productRepository).delete(any(Product.class));
+    public void deleteProduct_ProductNotFound_ThrowsProductNotFoundException() {
+        when(productRepository.existsById(anyLong())).thenReturn(false);
 
-        Assert.assertThrows(ProductNotFoundException.class, () -> productService.deleteProduct(product));
+        assertThrows(ProductNotFoundException.class, () -> productService.deleteProduct(1L));
     }
 }
